// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreativeCommons /> Should render correctly 1`] = `
.c6 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c6:first-of-type {
  margin-top: 0.86rem;
}

.c10 {
  width: 1.25rem;
  height: 1.25rem;
}

.c7 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: darkorchid;
  fill: darkorchid;
}

.c7:focus-within,
.c7:focus {
  position: relative;
  outline: none !important;
}

.c7:focus-within::after,
.c7:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c7:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c11 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c4 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c8 {
  margin: 0;
}

.c2 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  margin: 2.13rem 0 0 0;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  margin-left: 0;
  padding-top: 1rem;
  padding-bottom: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  position: absolute;
  top: 0;
  left: calc(50% - 50vw);
  z-index: -1;
  width: 100vw;
  height: 100%;
  background-color: #fbfbfb;
}

.c3 {
  width: 100%;
  padding-right: 1.875rem;
  padding-left: 1.865rem;
  text-align: center;
}

@media (prefers-color-scheme:dark) {
  .c7:focus-within::after,
  .c7:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c7 {
    color: orchid;
    fill: orchid;
  }

  .c7:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c2 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-color: #121313;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2 c3"
    >
      <h1
        class="c4 c5"
        id="copyright"
      >
        Copyright
      </h1>
      <span
        class="c6"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="c7"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c8"
          >
            Creative Commons BY-SA 3.0
          </span>
          <div
            class="c9"
          >
            <svg
              class="c10 c11"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <span
          class="c8"
        >
          contact me
        </span>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<CreativeCommons /> Should render correctly with custom className 1`] = `
.c6 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c6:first-of-type {
  margin-top: 0.86rem;
}

.c10 {
  width: 1.25rem;
  height: 1.25rem;
}

.c7 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: darkorchid;
  fill: darkorchid;
}

.c7:focus-within,
.c7:focus {
  position: relative;
  outline: none !important;
}

.c7:focus-within::after,
.c7:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c7:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c11 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c4 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c8 {
  margin: 0;
}

.c2 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  margin: 2.13rem 0 0 0;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  margin-left: 0;
  padding-top: 1rem;
  padding-bottom: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  position: absolute;
  top: 0;
  left: calc(50% - 50vw);
  z-index: -1;
  width: 100vw;
  height: 100%;
  background-color: #fbfbfb;
}

.c3 {
  width: 100%;
  padding-right: 1.875rem;
  padding-left: 1.865rem;
  text-align: center;
}

@media (prefers-color-scheme:dark) {
  .c7:focus-within::after,
  .c7:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c7 {
    color: orchid;
    fill: orchid;
  }

  .c7:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c2 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-color: #121313;
  }
}

<div>
  <div
    class="c0 test-custom-className"
  >
    <div
      class="c1"
    />
    <div
      class="c2 c3"
    >
      <h1
        class="c4 c5"
        id="copyright"
      >
        Copyright
      </h1>
      <span
        class="c6"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="c7"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c8"
          >
            Creative Commons BY-SA 3.0
          </span>
          <div
            class="c9"
          >
            <svg
              class="c10 c11"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <span
          class="c8"
        >
          contact me
        </span>
        .
      </span>
    </div>
  </div>
</div>
`;
